* Simplified the Bureau response and requests to only refer adapaters for name
